--- a/helm/openneuro/templates/web-deployment.yaml
+++ b/helm/openneuro/templates/web-deployment.yaml
@@ -22,3 +22,8 @@ spec:
           image: 'openneuro/app:v{{ .Chart.AppVersion }}'
           ports:
             - containerPort: 80
+          envFrom:
+            - configMapRef:
+                name: {{ .Release.Name }}-configmap
+            - secretRef:
+                name: {{ .Release.Name }}-secret
