--- a/helm/openneuro/templates/configmap.yaml
+++ b/helm/openneuro/templates/configmap.yaml
@@ -8,3 +8,5 @@ data:
   FRESH_DESK_URL: {{ .Values.freshDeskUrl | quote }}
   ENVIRONMENT: {{ .Values.environment | quote }}
   GOOGLE_TRACKING_ID: {{ .Values.googleTrackingId | quote }}
+  REDIS_HOST: {{ .Release.Name }}-redis-master
+  REDIS_PORT: 6379
