Add default Redis configuration to docker-compose example.

--- a/config.env.example
+++ b/config.env.example
@@ -53,6 +53,10 @@ FRESH_DESK_URL=
 # Enable Apollo engine monitoring
 ENGINE_API_KEY=
 
+# Redis connection
+REDIS_HOST=redis
+REDIS_PORT=6379
+
 # client -----------------------------------------------------------------------
 
 ANALYSIS_ENABLED=true
