--- a/helm/openneuro/templates/configmap.yaml
+++ b/helm/openneuro/templates/configmap.yaml
@@ -9,4 +9,5 @@ data:
   ENVIRONMENT: {{ .Values.environment | quote }}
   GOOGLE_TRACKING_ID: {{ .Values.googleTrackingId | quote }}
   REDIS_HOST: {{ .Release.Name }}-redis-master
-  REDIS_PORT: 6379
+  REDIS_PORT: "6379"
+  GRAPHQL_ENDPOINT: {{ .Release.Name }}-api
