Helm: Allow MongoDB URL to be overriden.

--- a/config.env.example
+++ b/config.env.example
@@ -53,6 +53,9 @@ FRESH_DESK_URL=
 # Enable Apollo engine monitoring
 ENGINE_API_KEY=
 
+# MongoDB URL
+MONGO_URL=mongodb://mongo:27017/
+
 # Redis connection
 REDIS_HOST=redis
 REDIS_PORT=6379
