--- a/helm/openneuro/secrets.yaml.example
+++ b/helm/openneuro/secrets.yaml.example
@@ -19,6 +19,10 @@ secrets:
     #GLOBUS_CLIENT_ID:
     #GLOBUS_CLIENT_SECRET:
 
+  # MongoDB configuration
+  mongo:
+    MONGO_URL: 
+
   # Notification service configuration
   mail: 
     # Mailgun is the only supported value at the moment
