--- a/helm/openneuro/templates/secret.yaml
+++ b/helm/openneuro/templates/secret.yaml
@@ -29,3 +29,4 @@ stringData:
   DOI_PREFIX: {{ required "DOI_PREFIX is required" .Values.secrets.doi.DOI_PREFIX | quote }}
   DOI_URL: {{ required "DOI_URL is required" .Values.secrets.doi.DOI_URL | quote }}
   FLOWER_BASIC_AUTH: {{ required "FLOWER_BASIC_AUTH must be set to avoid insecure default values" .Values.secrets.flower.FLOWER_BASIC_AUTH | quote }}
+  MONGO_URL: {{ required "MONGO_URL with credentials is required" .Values.secrets.mongo.MONGO_URL | quote }}
