--- a/helm/secrets.yaml.example
+++ b/helm/secrets.yaml.example
@@ -21,7 +21,7 @@ secrets:
 
   # MongoDB configuration
   mongo:
-    MONGO_URL: 
+    # MONGO_URL: 
 
   # Notification service configuration
   mail: 
