Allow configuration of datalad-service connection info.

--- a/config.env.example
+++ b/config.env.example
@@ -56,6 +56,9 @@ ENGINE_API_KEY=
 # MongoDB URL
 MONGO_URL=mongodb://mongo:27017/
 
+# DataLad service container host and port
+DATALAD_SERVICE_URI=datalad:9877
+
 # Redis connection
 REDIS_HOST=redis
 REDIS_PORT=6379
