Helm: Make auth configurations all optional in secret template.

--- a/helm/openneuro/templates/secret.yaml
+++ b/helm/openneuro/templates/secret.yaml
@@ -4,12 +4,18 @@ metadata:
   name: {{ .Release.Name }}-secret
 stringData:
   JWT_SECRET: {{ required "JWT_SECRET is required" .Values.secrets.JWT_SECRET | quote }}
+{{- if .Values.secrets.auth.GOOGLE_CLIENT_SECRET }}
   GOOGLE_CLIENT_ID: {{ .Values.secrets.auth.GOOGLE_CLIENT_ID | quote }}
   GOOGLE_CLIENT_SECRET: {{ .Values.secrets.auth.GOOGLE_CLIENT_SECRET | quote }}
+{{- end }}
+{{- if .Values.secrets.auth.ORCID_CLIENT_SECRET }}
   ORCID_CLIENT_ID: {{ .Values.secrets.auth.ORCID_CLIENT_ID | quote }}
   ORCID_CLIENT_SECRET: {{ .Values.secrets.auth.ORCID_CLIENT_SECRET | quote }}
+{{- end }}
+{{- if .Values.secrets.auth.GLOBUS_CLIENT_SECRET }}
   GLOBUS_CLIENT_ID: {{ .Values.secrets.auth.GLOBUS_CLIENT_ID | quote }}
   GLOBUS_CLIENT_SECRET: {{ .Values.secrets.auth.GLOBUS_CLIENT_SECRET | quote }}
+{{- end }}
   CRN_SERVER_MAIL_SERVICE: {{ required "MAIL_SERVICE is required" .Values.secrets.mail.CRN_SERVER_MAIL_SERVICE | quote }}
   CRN_SERVER_MAIL_USER: {{ required "MAIL_USER is required" .Values.secrets.mail.CRN_SERVER_MAIL_USER | quote }}
   CRN_SERVER_MAIL_URL: {{ required "MAIL_URL is required" .Values.secrets.mail.CRN_SERVER_MAIL_USER | quote }}
