--- a/packages/openneuro-app/Dockerfile
+++ b/packages/openneuro-app/Dockerfile
@@ -17,5 +17,5 @@ RUN yarn build && cp maintenance.html dist/
 
 FROM nginx:alpine AS web
 COPY --from=app /srv/packages/openneuro-app/dist /srv/app/dist
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY packages/openneuro-app/nginx.conf /etc/nginx/conf.d/default.conf
 
