--- a/helm/openneuro/values.yaml
+++ b/helm/openneuro/values.yaml
@@ -13,14 +13,26 @@ freshDeskUrl: https://openneuro.freshdesk.com/widgets/feedback_widget/new?&widge
 # Enable Google Analytics
 googleTrackingId: UA-100754266-1
 
+# AWS TLS Certificate ARN
+certifcateArn: "arn:aws:acm:us-east-1:488777458602:certificate/6883342b-63ac-4466-b3f8-d9a8dd80bfaa"
+
 # Dataset worker parallelism
 dataladWorkers: 16
+
+# Content container tag
+contentTag: v1.0.0
 
 # The underlying EFS volume should be created manually and configured here
 efs-provisioner:
   efsProvisioner:
     awsRegion: us-east-1
     efsFileSystemId: fs-acb10b4f
+
+# Load balancer / ingress config
+aws-alb-ingress-controller:
+  awsRegion: us-east-1
+  autoDiscoverAwsVpcID: true
+  clusterName: openneuro-staging
 
 # Disable Redis password for testing
 redis:
