--- a/helm/openneuro/templates/dataset-worker-stateful-set.yaml
+++ b/helm/openneuro/templates/dataset-worker-stateful-set.yaml
@@ -23,7 +23,7 @@ spec:
             name: {{ .Release.Name }}-secret
         volumeMounts:
         - name: datasets
-          mountPath: /datasets
+          mountPath: /datalad
   volumeClaimTemplates:
   - metadata:
       name: {{ .Release.Name }}-datasets
