Helm: Add websocket ingress route.

--- a/helm/openneuro/templates/ingress.yaml
+++ b/helm/openneuro/templates/ingress.yaml
@@ -13,6 +13,10 @@ spec:
   rules:
     - http:
         paths:
+          - path: /graphql-subscriptions
+            backend:
+              serviceName: {{ .Release.Name }}-api
+              servicePort: 8111
           - path: /crn/*
             backend:
               serviceName: {{ .Release.Name }}-api
