Allow configuration of database name for MongoDB connections.

--- a/config.env.example
+++ b/config.env.example
@@ -54,7 +54,7 @@ FRESH_DESK_URL=
 ENGINE_API_KEY=
 
 # MongoDB URL
-MONGO_URL=mongodb://mongo:27017/
+MONGO_URL=mongodb://mongo:27017/crn
 
 # DataLad service container host and port
 DATALAD_SERVICE_URI=datalad:9877
