Upgrade to monogdb driver 3.2.6

--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -43,7 +43,7 @@
     "juice": "^2.0.0",
     "mime-types": "^2.1.19",
     "moment": "^2.14.1",
-    "mongodb": "^2.2.34",
+    "mongodb": "3.2.6",
     "mongoose": "https://github.com/Automattic/mongoose.git#89bcfcf24e5dc78c4542d2319bf63923e970a542",
     "morgan": "^1.6.1",
     "node-fetch": "^2.0.0",
