--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -80,11 +80,10 @@
     "ioredis-mock": "^3.8.1",
     "jest": "^24.6.0",
     "mockingoose": "^2.11.0",
-    "mongo-mock": "https://github.com/williamkapke/mongo-mock",
+    "mongo-mock": "3.7.1",
     "supertest": "^3.0.0"
   },
   "jest": {
-    "testEnvironment": "node",
-    "globalSetup": "./jestSetup.js"
+    "testEnvironment": "node"
   }
 }
