--- a/helm/openneuro/templates/datalad-service-deployment.yaml
+++ b/helm/openneuro/templates/datalad-service-deployment.yaml
@@ -34,4 +34,7 @@ spec:
             name: {{ .Release.Name }}-configmap
         - secretRef:
             name: {{ .Release.Name }}-secret
+        volumeMounts:
+        - name: datasets
+          mountPath: /datalad
 
