Helm: Allow all redis commands.

--- a/helm/openneuro/values.yaml
+++ b/helm/openneuro/values.yaml
@@ -40,3 +40,5 @@ aws-alb-ingress-controller:
 # Disable Redis password for testing
 redis:
   usePassword: false
+  master:
+    disableCommands: []
