Add Apollo Engine API key to Helm deployment.

--- a/helm/secrets.yaml.example
+++ b/helm/secrets.yaml.example
@@ -2,6 +2,10 @@ secrets:
   # A unique true random string used to secure JWT tokens
   JWT_SECRET:
 
+  # Apollo GraphQL configuration
+  apollo:
+    # ENGINE_API_KEY:
+
   # At least one auth method must be configured
   auth:
     # Google oauth2 configuration - configure to enable Google auth
