Helm: Add missing ORCID API environment variable.

--- a/helm/openneuro/templates/secret.yaml
+++ b/helm/openneuro/templates/secret.yaml
@@ -11,6 +11,7 @@ stringData:
 {{- if .Values.secrets.auth.ORCID_CLIENT_SECRET }}
   ORCID_CLIENT_ID: {{ .Values.secrets.auth.ORCID_CLIENT_ID | quote }}
   ORCID_CLIENT_SECRET: {{ .Values.secrets.auth.ORCID_CLIENT_SECRET | quote }}
+  ORCID_API_ENDPOINT: {{ .Values.secrets.auth.ORCID_API_ENDPOINT | quote }}
 {{- end }}
 {{- if .Values.secrets.auth.GLOBUS_CLIENT_SECRET }}
   GLOBUS_CLIENT_ID: {{ .Values.secrets.auth.GLOBUS_CLIENT_ID | quote }}
