Helm: Fix beat scheduler label

--- a/helm/openneuro/templates/beat-scheduler-deployment.yaml
+++ b/helm/openneuro/templates/beat-scheduler-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: {{ .Release.Name }}-beat-scheduler
   labels:
-    app: openneuro-api
+    app: '{{ .Release.Name }}-beat-scheduler'
     chart: '{{ .Chart.Name }}-{{ .Chart.Version }}'
     release: '{{ .Release.Name }}'
     heritage: '{{ .Release.Service }}'
