--- a/helm/openneuro/templates/publish-worker-deployment.yaml
+++ b/helm/openneuro/templates/publish-worker-deployment.yaml
@@ -24,6 +24,12 @@ spec:
       - name: datasets
         persistentVolumeClaim:
           claimName: {{ .Release.Name }}-datasets
+      - name: ssh-key
+        secret:
+          secretName: {{ .Release.Name }}-ssh-key
+          items:
+          - key: datalad-key
+            path: datalad-key
       containers:
       - name: {{ .Release.Name }}-publish-worker
         image: 'openneuro/datalad-service:v{{ .Chart.AppVersion }}'
@@ -37,3 +43,6 @@ spec:
         volumeMounts:
         - name: datasets
           mountPath: /datalad
+        - name: ssh-key
+          mountPath: /datalad-key
+          subPath: datalad-key
