Helm: Add missing DATALAD_S3_PUBLIC_ON_EXPORT configuration

--- a/helm/openneuro/templates/configmap.yaml
+++ b/helm/openneuro/templates/configmap.yaml
@@ -12,3 +12,4 @@ data:
   REDIS_PORT: "6379"
   GRAPHQL_ENDPOINT: http://{{ .Release.Name }}-api:8111/crn/graphql
   DATALAD_SERVICE_URI: {{ .Release.Name }}-datalad-service:9877
+  DATALAD_S3_PUBLIC_ON_EXPORT: "yes"
