Document DATALAD_S3_PUBLIC_ON_EXPORT in example configuration.

--- a/config.env.example
+++ b/config.env.example
@@ -76,3 +76,6 @@ DATALAD_GITHUB_EXPORTS_ENABLED=false
 DATALAD_GITHUB_ORG=
 DATALAD_GITHUB_LOGIN=
 DATALAD_GITHUB_PASS=
+
+# Set public ACL on public files pushed to S3
+DATALAD_S3_PUBLIC_ON_EXPORT=yes
