--- a/helm/openneuro/values.yaml
+++ b/helm/openneuro/values.yaml
@@ -7,8 +7,12 @@ url: https://openneuro.staging.sqm.io
 # A unique string identifying this install of OpenNeuro
 environment: staging
 
-# Enable FreshDesk ticketing
+# Enable FreshDesk ticketing with widget
 freshDeskUrl: https://openneuro.freshdesk.com/widgets/feedback_widget/new?&widgetType=embedded&screenshot=no
+
+# Enable Automated Freshdesk ticketing
+freshDeskApi: https://openneuro.freshdesk.com/api/v2/tickets
+freshDeskKey: U8EJRREfnrCWPDQzEHr
 
 # Enable Google Analytics
 googleTrackingId: UA-100754266-1
