--- a/helm/openneuro/templates/configmap.yaml
+++ b/helm/openneuro/templates/configmap.yaml
@@ -6,6 +6,8 @@ data:
   CRN_SERVER_URL: {{ .Values.url | quote }}
   DATALAD_WORKERS: {{ .Values.dataladWorkers | quote }}
   FRESH_DESK_URL: {{ .Values.freshDeskUrl | quote }}
+  FRESH_DESK_API: {{ .Values.freshDeskApi | quote }}
+  FRESH_DESK_KEY: {{ .Values.freshDeskKey | quote }}
   ENVIRONMENT: {{ .Values.environment | quote }}
   GOOGLE_TRACKING_ID: {{ .Values.googleTrackingId | quote }}
   REDIS_HOST: {{ .Release.Name }}-redis-master
