--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -20,7 +20,7 @@
     "@emotion/styled": "^10.0.4",
     "@loadable/component": "^5.7.0",
     "@sentry/browser": "^4.5.3",
-    "apollo-client": "^2.6.3",
+    "apollo-client": "2.6.4",
     "apollo-link-ws": "^1.0.18",
     "babel-runtime": "^6.26.0",
     "bids-validator": "1.3.3",
@@ -39,7 +39,7 @@
     "prismjs": "^1.10.0",
     "prop-types": "^15.6.0",
     "react": "16.8.6",
-    "react-apollo": "^2.5.8",
+    "react-apollo": "3.0.1",
     "react-bootstrap": "0.31.3",
     "react-cookie": "^2.2.0",
     "react-copy-to-clipboard": "^5.0.1",
