--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -11,6 +11,7 @@
     "apollo-boost": "^0.4.3",
     "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.18",
+    "apollo-link-schema": "^1.2.3",
     "apollo-link-ws": "^1.0.18",
     "apollo-upload-client": "https://github.com/nellh/apollo-upload-client-build.git#d7d4cd0d630bd5a8eee4bb2257d1cb267c797185",
     "cross-fetch": "^3.0.4",
