--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -89,6 +89,7 @@
     "jest-fetch-mock": "^1.4.1",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.5.3",
+    "object.fromentries": "^2.0.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.8.6",
     "sass-loader": "^7.1.0",
