--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-cli",
-  "version": "3.5.5",
+  "version": "3.6.0-rc.1",
   "description": "OpenNeuro command line uploader / editor.",
   "main": "index.js",
   "repository": "git@github.com:OpenNeuroOrg/openneuro.git",
@@ -23,7 +23,7 @@
     "inquirer": "^5.2.0",
     "mkdirp": "^0.5.1",
     "moment": "^2.22.2",
-    "openneuro-client": "^3.5.4",
+    "openneuro-client": "^3.6.0-rc.1",
     "superagent": "^4.1.0"
   },
   "scripts": {
