--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-client",
-  "version": "3.5.4",
+  "version": "3.6.0-rc.1",
   "description": "OpenNeuro shared client library.",
   "main": "src/index.js",
   "browser": "src/client.js",
