--- a/helm/openneuro/templates/beat-scheduler-deployment.yaml
+++ b/helm/openneuro/templates/beat-scheduler-deployment.yaml
@@ -23,6 +23,13 @@ spec:
       containers:
       - name: {{ .Release.Name }}-beat-scheduler
         image: 'openneuro/datalad-service:v{{ .Chart.AppVersion }}'
+        resources:
+          limits:
+            cpu: "0.5"
+            memory: "2Gi"
+          requests:
+            cpu: "0.1"
+            memory: "1Gi"
         command:
           - /beat-scheduler
         envFrom:
