--- a/helm/openneuro/templates/datalad-service-deployment.yaml
+++ b/helm/openneuro/templates/datalad-service-deployment.yaml
@@ -29,9 +29,11 @@ spec:
         image: 'openneuro/datalad-service:v{{ .Chart.AppVersion }}'
         resources:
           limits:
-            cpu: "1"
+            cpu: "0.5"
+            memory: "2Gi"
           requests:
-            cpu: "0.2"
+            cpu: "0.1"
+            memory: "1Gi"
         ports:
         - containerPort: 9877
         envFrom:
