--- a/helm/openneuro/templates/publish-worker-deployment.yaml
+++ b/helm/openneuro/templates/publish-worker-deployment.yaml
@@ -34,6 +34,13 @@ spec:
       containers:
       - name: {{ .Release.Name }}-publish-worker
         image: 'openneuro/datalad-service:v{{ .Chart.AppVersion }}'
+        resources:
+          limits:
+            cpu: "0.5"
+            memory: "2Gi"
+          requests:
+            cpu: "0.1"
+            memory: "1Gi"
         command:
           - /publish-worker
         envFrom:
