--- a/helm/openneuro/templates/api-deployment.yaml
+++ b/helm/openneuro/templates/api-deployment.yaml
@@ -26,7 +26,7 @@ spec:
           resources:
             limits:
               cpu: ".8"
-              memory: "1.6Gi"
+              memory: "1600Mi"
             requests:
               cpu: ".4"
               memory: "768Mi"
