--- a/helm/openneuro/templates/dataset-worker-stateful-set.yaml
+++ b/helm/openneuro/templates/dataset-worker-stateful-set.yaml
@@ -29,7 +29,7 @@ spec:
             memory: "2Gi"
           requests:
             cpu: "0.1"
-            memory: "1Gi"
+            memory: "768Mi"
         command:
           - /dataset-worker
         envFrom:
