--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -26,6 +26,7 @@
     "bids-validator": "1.3.6",
     "bowser": "^1.7.3",
     "bytes": "^3.0.0",
+    "core-js": "^3",
     "date-fns": "^1.29.0",
     "draft-js": "^0.10.5",
     "enzyme-to-json": "^3.3.5",
