--- a/helm/openneuro/templates/dataset-worker-stateful-set.yaml
+++ b/helm/openneuro/templates/dataset-worker-stateful-set.yaml
@@ -40,3 +40,11 @@ spec:
         volumeMounts:
         - name: datasets
           mountPath: /datalad
+        livenessProbe:
+          initialDelaySeconds: 10
+          periodSeconds: 1
+          exec:
+            command:
+            - /bin/sh
+            - -c
+            - celery status --app datalad_service.worker | grep "${HOSTNAME}:.*OK"
