--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -26,10 +26,10 @@
     "bids-validator": "1.3.6",
     "bowser": "^1.7.3",
     "bytes": "^3.0.0",
+    "core-js": "^3.3.2",
     "date-fns": "^1.29.0",
     "draft-js": "^0.10.5",
     "enzyme-to-json": "^3.3.5",
-    "es6-shim": "^0.35.5",
     "eslint": "^5.7.0",
     "graphql": "^14.4.2",
     "jszip": "^3.1.5",
@@ -61,18 +61,20 @@
     "xmldoc": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.2.1",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/runtime": "^7.1.2",
-    "@loadable/babel-plugin": "^5.7.0",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/runtime": "^7.6.3",
+    "@babel/runtime-corejs3": "^7.6.3",
+    "@loadable/babel-plugin": "^5.10.3",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
+    "babel-eslint": "10.0.3",
+    "babel-jest": "^24.9.0",
     "babel-loader": "^8.0.4",
     "cache-loader": "^1.2.2",
     "clean-webpack-plugin": "^0.1.19",
