--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -26,6 +26,7 @@
     "bids-validator": "1.3.6",
     "bowser": "^1.7.3",
     "bytes": "^3.0.0",
+    "comlink": "^4.0.5",
     "core-js": "^3.3.2",
     "date-fns": "^1.29.0",
     "draft-js": "^0.10.5",
@@ -101,7 +102,8 @@
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack-visualizer-plugin": "^0.1.11",
+    "worker-loader": "^2.0.0"
   },
   "jest": {
     "setupFiles": [
