Allow jest-babel to transform bids-validator.
https://github.com/bids-standard/bids-validator/issues/869

--- a/packages/openneuro-cli/package.json
+++ b/packages/openneuro-cli/package.json
@@ -36,6 +36,9 @@
       "!**/*.spec.js",
       "!**/node_modules/**",
       "!**/vendor/**"
+    ],
+    "transformIgnorePatterns": [
+      "/node_modules/(?!bids-validator).+\\.js$"
     ]
   },
   "devDependencies": {
