--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -16,6 +16,7 @@
   },
   "author": "Squishymedia",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@emotion/core": "^10.0.4",
     "@emotion/styled": "^10.0.4",
     "@loadable/component": "^5.7.0",
@@ -40,7 +41,7 @@
     "prismjs": "^1.10.0",
     "prop-types": "^15.6.0",
     "react": "16.8.6",
-    "react-apollo": "3.0.1",
+    "react-apollo": "3.1.3",
     "react-bootstrap": "0.31.3",
     "react-cookie": "^2.2.0",
     "react-copy-to-clipboard": "^5.0.1",
