--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -52,8 +52,10 @@
     "react-markdown": "^3.3.4",
     "react-router": "^4.4.0-beta.7",
     "react-router-dom": "^4.4.0-beta.7",
+    "react-spring": "^8.0.27",
     "react-toastify": "^4.4.0",
     "react-virtualized": "^9.21.0",
+    "resize-observer-polyfill": "^1.5.1",
     "semver": "^5.5.0",
     "serviceworker-webpack-plugin": "^1.0.1",
     "subscriptions-transport-ws": "^0.9.9",
