--- a/helm/openneuro/templates/ingress.yaml
+++ b/helm/openneuro/templates/ingress.yaml
@@ -11,10 +11,19 @@ metadata:
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/healthcheck-path: /crn/
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
-    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Host": "openneuro.org", "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
+    alb.ingress.kubernetes.io/actions.www-redirect: '{"Type": "redirect", "RedirectConfig": {"Host": "{{ .Values.hostname }}", "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
 spec:
   rules:
-    - http:
+    - host: www.{{ .Values.hostname }}
+      http:
+        paths:
+          - path: /*
+            backend:
+              serviceName: www-redirect
+              servicePort: use-annotation
+    - host: {{ .Values.hostname }}
+      http:
         paths:
           - path: /*
             backend:
