--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint-plugin-react": "^7.7.0",
     "husky": "^0.15.0-rc.13",
     "jest": "^24.9.0",
-    "lerna": "^2.9.1",
+    "lerna": "3.20.2",
     "lint-staged": "^6.0.1",
     "prettier": "^1.7.0"
   },
