Switch to graphql-compose as pre-requisite for elasticsearch schema.
This makes it easier to programmically extend the schema with search
fields defined by the structure of our ElasticSearch indexes.

--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -17,8 +17,8 @@
     "cross-fetch": "^3.0.4",
     "esm": "^3.0.84",
     "form-data": "^2.5.0",
-    "graphql": "^14.4.2",
-    "graphql-tools": "^4.0.5",
+    "graphql": "14.5.8",
+    "graphql-tools": "4.0.6",
     "node-fetch": "^2.6.0",
     "subscriptions-transport-ws": "^0.9.15"
   },
