--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -33,7 +33,8 @@
     "draft-js": "^0.10.5",
     "enzyme-to-json": "^3.3.5",
     "eslint": "^6.5.1",
-    "graphql": "^14.4.2",
+    "graphql": "14.5.8",
+    "graphql-tools": "4.0.6",
     "jszip": "^3.1.5",
     "jwt-decode": "^2.2.0",
     "openneuro-client": "^3.9.0",
