--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -22,20 +22,21 @@
     "apollo-server-express": "2.7.0",
     "async": "^2.4.1",
     "base64url": "^2.0.0",
-    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "cron": "^1.1.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
     "express": "^4.17.1",
-    "graphql": "14.4.2",
+    "graphql": "14.5.8",
     "graphql-bigint": "^1.0.0",
+    "graphql-compose": "^7.8.0",
+    "graphql-compose-elasticsearch": "^4.0.6",
     "graphql-iso-date": "^3.5.0",
     "graphql-redis-subscriptions": "2.1.0",
     "graphql-subscriptions": "^1.1.0",
     "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.5",
+    "graphql-tools": "4.0.6",
     "immutable": "^3.8.2",
     "ioredis": "^4.14.0",
     "jsdom": "^11.6.2",
