--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - yarn_cache:/root/.cache
       - project:/srv/packages/openneuro-app/dist
     ports:
-      - "8145:8145"
+      - '8145:8145'
     tmpfs:
       - /srv/node_modules:exec
       - /srv/packages/openneuro-app/node_modules:exec
@@ -62,6 +62,7 @@ services:
       - redis
       - mongo
       - datalad
+      - elasticsearch
 
   # datalad Python backend
   datalad:
@@ -129,3 +130,11 @@ services:
     depends_on:
       - server
       - datalad
+
+  elasticsearch:
+    image: elasticsearch:7.5.1
+    environment:
+      discovery.type: single-node
+    ports:
+      - '9200:9200'
+      - '9300:9300'
