Enable elasticsearch API in /search namespace.

--- a/config.env.example
+++ b/config.env.example
@@ -79,3 +79,6 @@ DATALAD_GITHUB_PASS=
 
 # Set public ACL on public files pushed to S3
 DATALAD_S3_PUBLIC_ON_EXPORT=yes
+
+# Elastic Search connection string
+ELASTICSEARCH_CONNECTION=http://elasticsearch:9200
