--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -27,6 +27,7 @@
     "cron": "^1.1.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
+    "elasticsearch": "^16.6.0",
     "express": "^4.17.1",
     "graphql": "14.5.8",
     "graphql-bigint": "^1.0.0",
