--- a/packages/openneuro-client/package.json
+++ b/packages/openneuro-client/package.json
@@ -8,7 +8,8 @@
   "author": "Squishymedia",
   "license": "MIT",
   "dependencies": {
-    "apollo-boost": "^0.4.3",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.12",
     "apollo-link-context": "^1.0.18",
     "apollo-link-schema": "^1.2.3",
