Fix missing quote in openneuro-server health check.

--- a/packages/openneuro-server/Dockerfile
+++ b/packages/openneuro-server/Dockerfile
@@ -8,7 +8,7 @@ RUN apk add curl git make gcc g++ python --no-cache --update && \
   yarn install && \
   apk del make gcc g++ python
 
-HEALTHCHECK --interval=10s --retries=10 CMD curl -f 'http://localhost:8111 || exit 1
+HEALTHCHECK --interval=10s --retries=10 CMD curl -f 'http://localhost:8111' || exit 1
 
 ENV NODE_OPTIONS=--max_old_space_size=1024
 
