--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,6 +151,7 @@ services:
       target: indexer
     depends_on:
       - server
+      - elasticsearch
     env_file: ./config.env
     volumes:
       - ./packages/openneuro-indexer/src:/srv/packages/openneuro-indexer/src
