--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -15,6 +15,7 @@
   },
   "author": "Squishymedia",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.5.1",
     "@passport-next/passport-google-oauth2": "^1.0.0",
     "@sentry/node": "^4.5.3",
     "apollo-server": "2.7.0",
@@ -26,12 +27,10 @@
     "cron": "^1.1.0",
     "draft-js": "^0.10.5",
     "draft-js-export-html": "^1.2.0",
-    "elasticsearch": "^16.6.0",
     "express": "^4.17.1",
     "graphql": "14.5.8",
     "graphql-bigint": "^1.0.0",
     "graphql-compose": "^7.8.0",
-    "graphql-compose-elasticsearch": "^4.0.6",
     "graphql-iso-date": "^3.5.0",
     "graphql-redis-subscriptions": "2.1.0",
     "graphql-subscriptions": "^1.1.0",
