--- a/packages/openneuro-app/package.json
+++ b/packages/openneuro-app/package.json
@@ -51,8 +51,8 @@
     "react-helmet": "^5.2.0",
     "react-json-tree": "^0.11.2",
     "react-markdown": "^3.3.4",
-    "react-router": "^4.4.0-beta.7",
-    "react-router-dom": "^4.4.0-beta.7",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-spring": "^8.0.27",
     "react-toastify": "^4.4.0",
     "react-virtualized": "^9.21.0",
