--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,40 @@ jobs:
               docker push "openneuro/server:${CIRCLE_TAG}"
             fi
 
+  indexer-build:
+    working_directory: ~/OpenNeuroOrg/openneuro
+    machine:
+      enabled: true
+    steps:
+      - checkout
+      - run:
+          name: login
+          command: docker login -u $DOCKER_USER -p $DOCKER_PASS
+      - run:
+          name: build openneuro-indexer
+          command: docker build --pull -t openneuro/indexer packages/openneuro-indexer
+      - run:
+          name: docker tag + push (master)
+          command: |
+            if [ -z "${CIRCLE_TAG}" ] && [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker tag openneuro/indexer openneuro/indexer:latest
+              docker push openneuro/indexer
+            fi
+      - run:
+          name: docker tag + push (branch)
+          command: |
+            if [ -z "${CIRCLE_TAG}" ] && [ "${CIRCLE_BRANCH}" != "master" ]; then
+              docker tag openneuro/indexer "openneuro/indexer:${CIRCLE_BRANCH}"
+              docker push "openneuro/indexer:${CIRCLE_BRANCH}"
+            fi
+      - run:
+          name: docker tag + push (tag)
+          command: |
+            if [ "${CIRCLE_TAG}" ]; then
+              docker tag openneuro/indexer "openneuro/indexer:${CIRCLE_TAG}"
+              docker push "openneuro/indexer:${CIRCLE_TAG}"
+            fi
+
   sentry-release:
     working_directory: ~/OpenNeuroOrg/openneuro
     docker:
@@ -146,6 +180,13 @@ workflows:
             tags:
               only: /^v.*/
       - server-build:
+          requires:
+            - build
+            - cli-install-test
+          filters:
+            tags:
+              only: /^v.*/
+      - indexer-build:
           requires:
             - build
             - cli-install-test
