--- a/packages/openneuro-indexer/package.json
+++ b/packages/openneuro-indexer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-indexer",
-  "version": "3.11.0-alpha.0",
+  "version": "3.12.0",
   "description": "OpenNeuro elastic search indexing tool",
   "main": "./dist/index.js",
   "types": "./src/index.d.ts",
@@ -19,7 +19,6 @@
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   },
-  "devDependencies": {},
   "scripts": {
     "build": "tsc",
     "openneuro-indexer": "ts-node --type-check src/index.ts"
