--- a/helm/openneuro/templates/secret.yaml
+++ b/helm/openneuro/templates/secret.yaml
@@ -38,3 +38,4 @@ stringData:
   FLOWER_BASIC_AUTH: {{ required "FLOWER_BASIC_AUTH must be set to avoid insecure default values" .Values.secrets.flower.FLOWER_BASIC_AUTH | quote }}
   MONGO_URL: {{ required "MONGO_URL with credentials is required" .Values.secrets.mongo.MONGO_URL | quote }}
   ENGINE_API_KEY: {{ .Values.secrets.apollo.ENGINE_API_KEY | quote }}
+  ELASTICSEARCH_CONNECTION: {{ .Values.secrets.elasticsearch.ELASTICSEARCH_CONNECTION | quote }}
