Helm: Raise app version to 3.12.2 and use app version for indexer.

--- a/helm/openneuro/templates/indexer-job.yaml
+++ b/helm/openneuro/templates/indexer-job.yaml
@@ -15,7 +15,7 @@ spec:
         spec:
           containers:
           - name: openneuro-indexer
-            image: 'openneuro/indexer:latest'
+            image: 'openneuro/indexer:v{{ .Chart.AppVersion }}'
             resources:
               limits:
                 cpu: ".5"
