--- a/packages/openneuro-server/package.json
+++ b/packages/openneuro-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "openneuro-server",
-  "version": "3.12.2",
+  "version": "3.12.3-alpha.0",
   "description": "Core service for the OpenNeuro platform.",
   "license": "MIT",
   "main": "index.js",
