Prevent mapping mismatch for metadata boolean fields.

--- a/packages/openneuro-indexer/src/mappings/datasets-mapping.json
+++ b/packages/openneuro-indexer/src/mappings/datasets-mapping.json
@@ -9,8 +9,8 @@
         "trialCount": { "type": "long" },
         "studyDesign": { "type": "keyword" },
         "studyDomain": { "type": "keyword" },
-        "studyLongitudinal": { "type": "boolean" },
-        "dataProcessed": { "type": "boolean" },
+        "studyLongitudinal": { "type": "keyword" },
+        "dataProcessed": { "type": "keyword" },
         "species": { "type": "keyword" },
         "associatedPaperDOI": { "type": "keyword" },
         "openneuroPaperDOI": { "type": "keyword" },
