--- a/helm/openneuro/templates/indexer-job.yaml
+++ b/helm/openneuro/templates/indexer-job.yaml
@@ -8,7 +8,7 @@ metadata:
     release: '{{ .Release.Name }}'
     heritage: '{{ .Release.Service }}'
 spec:
-  schedule: "57 * * * *"
+  schedule: "57 */4 * * *"
   jobTemplate:
     spec:
       template:
